# unit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  codecov.yml  package.json  test.sh
.changeset/: blue-toes-brake.md  forty-impalas-begin.md  great-sheep-tease.md  kind-chicken-dress.md  lovely-steaks-love.md  metal-bags-burn.md  pink-starfishes-walk.md  purple-tigers-kneel.md  rare-squids-hang.md  rude-avocados-type.md  short-tigers-trade.md  silent-eagles-guess.md  six-cobras-tickle.md  sour-coins-call.md  strange-socks-invite.md  three-beds-yell.md  tidy-news-care.md  tiny-hats-give.md  twelve-lions-clean.md
.github/workflows/: build.yml
cmake/: code-coverage.cmake
doc/: Doxyfile
docs/: Doxyfile  api.rst  conf.py  index.rst
example/: CMakeLists.txt  test_files.c  vector.c  vector.h
include/: unit.h
scripts/: amalgamate.js  test-wasm.js  test.js
src/: CMakeLists.txt  all.c  amalgamate.js  fmemopen.c  printer.c  self-test.c  unit-alias.h  unit-def.h  unit-disabled.h  unit-main.c  unit.c  unit.h
test/: CMakeLists.txt  fun.c  main.c  main.cpp  test_asserts.c  test_files.c
test/cmd/: CMakeLists.txt  main.c
test/fail/: CMakeLists.txt  main.c
test/unit/: CMakeLists.txt  asserts.c  fun.c  main.c  main.cpp
